# KLEE-SEMu

./: .configure.swp  README.md
cmake/: find_llvm.cmake
lib/: CMakeLists.txt
lib/Mutation/: .ExecutionState_KS.h.swp  .Executor_KS.cpp.swp  .KS_Z3MaxSat.h.swp  CMakeLists.txt  Dockerfile  ExecutionState_KS.cpp  ExecutionState_KS.h  Executor_KS.cpp  Executor_KS.h  KS_Z3MaxSat.h  Makefile  README.md  UpdateFromKlee.sh  configureCMDS  patchesforupdate.patch
lib/Mutation/MyCore/: Executor.h  ExternalDispatcher.cpp
lib/Mutation/MyCore/klee/: ExecutionState.h
lib/Mutation/analysis/: .run.py.swp  ;  README.md  RELMUT_EXAMPLE_RUN.sh  RELMUT_EXAMPLE_SRC.c  analyse.py  cmd  ktest_tool.py  matrixHardness.py  rankSemuMutants.py  run.py  stats_for_run.py  tmpFix_pureklee_.py  wrapper-call-semu-concolic.in  wrapper-call-zesti-concolic.in
lib/Mutation/analysis/FixScanfForShadow/: README.TXT  my_atob.h  my_scanf.c  my_scanf.h
lib/Mutation/analysis/example/22/: .cmd.swp  .run_cmd.cfg.swp  HPC-params.cfg  cmd  cmd.cfg  prepareData.sh  run_cmd  run_cmd-HPC.cfg  run_cmd.cfg  run_cmd.cfg.old
lib/Mutation/analysis/example/22/inputs/genktests/: ktestPassFail.txt  ktestlist.txt
lib/Mutation/analysis/example/22/inputs/hpcConfigDir/: 22build.sh  22conf-script.conf  22expr-bugfix.patch  22klee-args-template.args  22runtests.sh  22srclist.txt  22testscases.txt  mfi_ktest-replay-optimizer.testlog
lib/Mutation/analysis/example/22/inputs/mutantsdata/: equidup-mutantsInfos.json  expr  expr.COV  expr.COV.bc  expr.MetaMu  expr.MetaMu.bc  expr.WM  expr.WM.bc  expr.Zesti.bc  expr.bc  info  mutantsInfos.json
lib/Mutation/analysis/test/: .gitignore  run_test.sh
lib/Mutation/analysis/test/SEMU_EXECUTION/prime/OUTPUT/caches/: candidateMutants_0.list  test2semudirMap.json  test2zestidirMap.json  testsamples.json
lib/Mutation/analysis/test/SEMU_EXECUTION/prime/inputs/hpcConfigDir/: prime_conf-script.conf  prime_testscases.txt
lib/Mutation/analysis/test/SEMU_EXECUTION/prime/inputs/mutantsdata/: prime  prime.COV.bc  prime.WM  prime.Zesti.bc  prime.bc
lib/Mutation/analysis/test/workspace/metactrl/helloworld_cmd/: .gitignore  helloworld_cmd_conf-script.conf  helloworld_cmd_mutation-scope.json  helloworld_cmd_srclist.txt  helloworld_cmd_srclist.txt.mutantscope
lib/Mutation/analysis/test/workspace/metactrl/helloworld_stdin/: .gitignore  helloworld_stdin_bugfixed-helloworld_stdin  helloworld_stdin_conf-script.conf  helloworld_stdin_mutation-scope.json  helloworld_stdin_runtests.sh  helloworld_stdin_srclist.txt  helloworld_stdin_srclist.txt.mutantscope
lib/Mutation/analysis/test/workspace/metactrl/prime/: .gitignore  prime_conf-script.conf  prime_srclist.txt  prime_srclist.txt.mutantscope
lib/Mutation/analysis/test/workspace/metactrl/prime/prime-output/: mfi_states_executing_times.txt
lib/Mutation/analysis/test/workspace/metactrl/relation/: .gitignore  relation_conf-script.conf  relation_klee-args-template.args.old  relation_mutation-scope.json  relation_srclist.txt
lib/Mutation/analysis/test/workspace/metactrl/tritype/: .gitignore  tritype_build.sh  tritype_conf-script.conf  tritype_klee-args-template.args  tritype_mutation-scope.json  tritype_runtests.sh  tritype_srclist.txt  tritype_srclist.txt.mutantscope
lib/Mutation/analysis/test/workspace/metactrl/winklee_bound/: .gitignore  winklee_bound_conf-script.conf  winklee_bound_klee-args-template.args  winklee_bound_klee-args-template.args.old  winklee_bound_mutation-scope.json  winklee_bound_srclist.txt  winklee_bound_srclist.txt.mutantscope  winklee_bound_testscases.txt
lib/Mutation/analysis/test/workspace/repos/helloworld_cmd/: .prime.o.bc  Makefile  helloworld_cmd.c
lib/Mutation/analysis/test/workspace/repos/helloworld_stdin/: Makefile  helloworld_stdin.c
lib/Mutation/analysis/test/workspace/repos/prime/: MFI_KLEE_TOPDIR_TEST_TEMPLATE.sh  Makefile  prime  prime.c  prime.covnowrap  prime.gcda  prime.gcno  prime.replay_cov_wrapper  prime.replay_wrapper
lib/Mutation/analysis/test/workspace/repos/relation/: Makefile  relation.c
lib/Mutation/analysis/test/workspace/repos/tritype/: Makefile  tritype.c
lib/Mutation/analysis/test/workspace/repos/winklee_bound/: Makefile  winklee_bound  winklee_bound.c
tools/klee/: CMakeLists.txt  main.cpp
tools/klee-semu/: CMakeLists.txt  Makefile
(+667 files in other folders)
